--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
 <body>
   <h1>js-oggetti-studenti</h1>
   <div class="student">
-    <p>
-      
-    </p>
+    <p class="student1"></p>
+    <p class="student2"></p>
+    <p class="student3"></p>
+    <p class="student4"></p>
+    <p class="student5"></p>
+    <p class="student6"></p>
   </div>
   <script src="js/script.js" charset="utf-8"></script>
 </body>
