Cleaned some code

--- a/index.html
+++ b/index.html
@@ -10,13 +10,17 @@
 </head>
 <body>
   <h1>js-oggetti-studenti</h1>
-  <div class="student">
-    <p class="student1"></p>
-    <p class="student2"></p>
-    <p class="student3"></p>
-    <p class="student4"></p>
-    <p class="student5"></p>
-    <p class="student6"></p>
+  <div class="container">
+    <div class="student">
+      <ul class="list-student">
+        <!-- <li></li> -->
+      </ul>
+    </div>
+  </div>
+  <div class="template">
+    <ul>
+      <li></li>
+    </ul>
   </div>
   <script src="js/script.js" charset="utf-8"></script>
 </body>
