--- a/handlebars/index.html
+++ b/handlebars/index.html
@@ -11,6 +11,14 @@
 </head>
 <body>
   <h1>js-oggetti-studenti-handlebars</h1>
+  <div class="container">
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis nisi inventore autem sapiente natus, itaque expedita rem maiores molestias, reiciendis accusantium, ducimus omnis a quos nemo alias nobis nostrum vitae?</p>
+    <input type="text" name="" value="">
+    <button type="button" name="button">Send a message</button>
+  </div>
+  <script id="template" type="text/x-handlebars-template">
+    <p>{{reply}}</p>
+  </script>
   <script src="script.js" charset="utf-8"></script>
 </body>
 </html>
