--- a/handlebars/index.html
+++ b/handlebars/index.html
@@ -13,8 +13,8 @@
   <h1>js-oggetti-studenti-handlebars</h1>
   <div class="container">
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis nisi inventore autem sapiente natus, itaque expedita rem maiores molestias, reiciendis accusantium, ducimus omnis a quos nemo alias nobis nostrum vitae?</p>
-    <input type="text" name="" value="">
-    <button type="button" name="button">Send a message</button>
+    <input class="input" type="text" name="" placeholder="Write a message">
+    <button class="button" type="button" name="button">Send a message</button>
   </div>
   <script id="template" type="text/x-handlebars-template">
     <p>{{reply}}</p>
