--- a/handlebars/index.html
+++ b/handlebars/index.html
@@ -17,7 +17,7 @@
     <button class="button" type="button" name="button">Send a message</button>
   </div>
   <script id="template" type="text/x-handlebars-template">
-    <p>{{reply}}</p>
+    <p class="{{background}}">{{reply}}</p>
   </script>
   <script src="script.js" charset="utf-8"></script>
 </body>
